Wifi Direct NetworkManager[10814] general protection fault ip:7ff18043084c sp:7ffc1b7b2c90 error:0 in libgobject-2.0.so.0.6000.6[7ff180406000+32000]
https://github.com/benzea/gnome-network-displays/issues/62#issuecomment-533841659 The connection is established via gnome-network-displays. Streaming works for a short time, then the network manager loses the connection and a crash is visible in dmesg. Network-Manager Build from git with
./configure --build=x86_64-linux-gnu --prefix=/usr --includedir=${prefix}/include --mandir=${prefix}/share/man --infodir=${prefix}/share/info --sysconfdir=/etc --localstatedir=/var --disable-silent-rules --libdir=${prefix}/lib/x86_64-linux-gnu --runstatedir=/run --disable-maintainer-mode --disable-dependency-tracking --libexecdir=/usr/lib/NetworkManager --runstatedir=/run --with-pppd-plugin-dir=/usr/lib/pppd/2.4.7 --with-pppd=/usr/sbin/pppd --with-resolvconf=/sbin/resolvconf --with-dhclient=/sbin/dhclient --with-iptables=/sbin/iptables --with-dnsmasq=/usr/sbin/dnsmasq --with-dnssec-trigger=/usr/lib/dnssec-trigger/dnssec-trigger-script --with-systemdsystemunitdir=/lib/systemd/system --with-udev-dir=/lib/udev --with-dbus-sys-dir=/usr/share/dbus-1/system.d --with-crypto=gnutls --with-session-tracking=systemd --with-suspend-resume=systemd --with-modem-manager-1 --with-nmtui --with-nmcli --with-selinux --with-libaudit --with-iwd --without-dhcpcanon --enable-polkit --enable-polkit-agent --enable-ppp --enable-ifupdown --enable-introspection --enable-gtk-doc --enable-concheck --enable-teamdctl --enable-json-validation --enable-bluez5-dun --enable-vala --disable-more-warnings --disable-modify-system --disable-ovs
** (gnome-network-displays:9210): DEBUG: 03:11:47.419: QOS: proportion: -71999991,603, processed: 104, dropped: 292 ** (gnome-network-displays:9210): DEBUG: 03:11:49.768: WfdMedia: Finalize ** (gnome-network-displays:9210): DEBUG: 03:11:49.768: Got state change notification from streaming sink to state ND_SINK_STATE_DISCONNECTED
[15702.259665] rtl8192se: switch case 0x5e not processed [15702.259756] wlan0: associated [15702.266588] IPv6: ADDRCONF(NETDEV_CHANGE): wlan0: link becomes ready [15744.308942] wlan0: deauthenticating from 12:3d:0a:02:ca:ec by local choice (Reason: 3=DEAUTH_LEAVING) [15744.835321] traps: NetworkManager[10814] general protection fault ip:7ff18043084c sp:7ffc1b7b2c90 error:0 in libgobject-2.0.so.0.6000.6[7ff180406000+32000]
Buildsystem is: CPU: Dual Core Intel Atom D525 (-MT MCP-) speed: 1800 MHz Kernel: 5.2.0-2-amd64 x86_64 Up: 4h 51m Mem: 831.3/1857.4 MiB (44.8%) Distro: Debian GNU/Linux bullseye/sid Graphics: Device-1: Intel Atom Processor D4xx/D5xx/N4xx/N5xx Integrated Graphics driver: i915 v: kernel Display: server: X.Org 1.19.6 driver: intel unloaded: fbdev,modesetting,vesa resolution: 1280x800~60Hz OpenGL: renderer: llvmpipe (LLVM 8.0 128 bits) v: 3.3 Mesa 19.1.6 Audio: Device-1: Intel NM10/ICH7 Family High Definition Audio driver: snd_hda_intel Sound Server: ALSA v: k5.2.0-2-amd64 Network: Device-1: Realtek RTL8191SEvA Wireless LAN driver: rtl8192se IF: wlan0 state: down mac: 68:a3:c4:f4:20:ac Device-2: Realtek RTL8111/8168/8411 PCI Express Gigabit Ethernet driver: r8169 IF: eth0 state: up speed: 100 Mbps duplex: full mac: d0:27:88:6f:e7:9e IF-ID-1: bonding_masters state: N/A speed: N/A duplex: N/A mac: N/A IF-ID-2: erspan0 state: down mac: 00:00:00:00:00:00 IF-ID-3: gre0 state: down mac: 00:00:00:00 IF-ID-4: gretap0 state: down mac: 00:00:00:00:00:00 IF-ID-5: ip6tnl0 state: down mac: 00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00