wifi/p2p: fix crash due to invalid signal handler supplicant_group_iface_group_finished_cb()

Fixes: 00e64d13320f ('core/devices: Add P2P Wifi device and peer tracking')

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/issues/249

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/merge_requests/284
(cherry picked from commit 9aa6c676efef727fa6eee515ca7d9725c4bbf176)